--- a/package.json
+++ b/package.json
@@ -12,17 +12,18 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^7.2.15",
-    "@angular/cdk": "^8.0.0",
+    "@angular/cdk": "^8.0.1",
     "@angular/common": "~7.2.0",
     "@angular/compiler": "~7.2.0",
-    "@angular/core": "~7.2.0",
+    "@angular/core": "^8.0.1",
     "@angular/forms": "~7.2.0",
     "@angular/http": "^7.2.15",
-    "@angular/material": "^8.0.0",
+    "@angular/material": "^8.0.1",
     "@angular/platform-browser": "~7.2.0",
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
     "core-js": "^2.5.4",
+    "hammerjs": "^2.0.8",
     "rxjs": "^6.5.2",
     "rxjs-compat": "^6.5.2",
     "tslib": "^1.9.0",
@@ -33,9 +34,10 @@
     "@angular/cli": "~7.3.9",
     "@angular/compiler-cli": "~7.2.0",
     "@angular/language-service": "~7.2.0",
-    "@types/node": "~8.9.4",
+    "@types/hammerjs": "^2.0.36",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "~8.9.4",
     "codelyzer": "~4.5.0",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
